--- a/package.json
+++ b/package.json
@@ -23,9 +23,13 @@
   "homepage": "https://github.com/saideep1112/React#readme",
   "devDependencies": {
     "parcel": "^2.12.0",
-    "process": "^0.11.10"
+    "postcss": "^8.4.41",
+    "process": "^0.11.10",
+    "tailwindcss": "^3.4.10"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.20",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
@@ -33,7 +37,7 @@
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1"
   },
-  "browserlist": [
+  "browserslist": [
     "last 2 versions"
   ]
 }
