--- a/package.json
+++ b/package.json
@@ -22,22 +22,35 @@
   },
   "homepage": "https://github.com/saideep1112/React#readme",
   "devDependencies": {
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.4",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.1",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "parcel": "^2.12.0",
     "postcss": "^8.4.41",
     "process": "^0.11.10",
     "tailwindcss": "^3.4.10"
   },
   "dependencies": {
+    "@babel/preset-react": "^7.24.7",
+    "@reduxjs/toolkit": "^2.2.7",
     "autoprefixer": "^10.4.20",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
     "react-slick": "^0.30.2",
+    "redux": "^5.0.1",
     "slick-carousel": "^1.8.1"
   },
   "browserslist": [
     "last 2 versions"
-  ]
+  ],
+  "proxy": "http://localhost:5000"
 }
